--- a/index.css
+++ b/index.css
@@ -103,12 +103,13 @@ button.font-akachan,
 
 /* カクカクしたカタカナフォント用のスタイル */
 .font-rikolog {
-  font-family: 'TokuLaboV2', sans-serif !important;
+  font-family: 'TokuLaboV2', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
   font-weight: normal !important;
   letter-spacing: 0.1em;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+  font-display: swap;
 }
 
 /* モバイルブラウザのナビゲーションバー対策用のユーティリティクラス */
